Kubernetes/manifests/nginx-basic/ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginxlabel
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginxlabel
  template:
    metadata:
      labels:
        app: nginxlabel
    spec:
      containers:
      - name: nginxlabel
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.1"
            memory: "64Mi"
          requests:
            cpu: "0.1"
            memory: "64Mi"
