Kubernetes/manifests/nginx-basic/ingress/apache-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - apache.ingress.danlhennessy.com
    secretName: apache-cert
  rules:
    - host: apache.ingress.danlhennessy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache-service
                port:
                  number: 8083
