Kubernetes/manifests/nginx-basic/ingress/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manual-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - k.danlhennessy.com
    secretName: ingress-cert
  rules:
    - host: k.danlhennessy.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8083
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8083
