Kubernetes/manifests/nginx-basic/ingress/nginx-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - nginx.ingress.danlhennessy.com
    secretName: quickstart-example-tls
  rules:
    - host: nginx.ingress.danlhennessy.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8083
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8083
